# traildiag

./: .gitignore  .justfile  README.md  pyproject.toml
paper/: traildiag.tex
src/traildiag/: __init__.py  diagram.py  keeper.py  plotter.py
tests/: generator.py  rosebrock.py  test_main.py
