[project]
name = "traildiag"
version = "0.1.0.dev3"
description = "A diagram that shows how the steps in an optimization went."
readme = "README.md"
authors = [
    { name = "Matthias P. Nowak", email = "me-github@mefju7.priv.no" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
traildiag = "traildiag:main"

[project.urls]
Repository = "https://github.com/matthias-p-nowak/traildiag"

[tool.pytest.ini_options]
addopts = "-s"
pythonpath = "src"

[tool.ruff]
src = ["src"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
